<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.RegisterActivity"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imageincription"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="209dp"
            android:layout_height="273dp"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logoProfil"
            app:srcCompat="@drawable/logoblbg" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="209dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/usernameInputR"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="#F4DEDE"
            android:textColorHighlight="#018786"
            android:textColorLink="#FF018786"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_marginBottom="200dp"
        android:text="@string/registerButton"
        android:textColorHint="#474C5A"
        app:backgroundTint="#404040"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="314dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordInputR"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:textColorHint="#F4DEDE"
        android:textColorHighlight="#018786"
        android:textColorLink="#FF018786"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>